--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm run compile
 
       - name: Package extension
-        run: npx vsce package
+        run: npx @vscode/vsce package
 
       - name: Upload VSIX as artifact
         uses: actions/upload-artifact@v4
